--- a/src/components/SearchInput/styles.css
+++ b/src/components/SearchInput/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 480px;
+  max-width: 480px;
   height: 46px;
   background: #FFF;
   border-radius: 23px;
