layout do SearchInput corrigido na home

--- a/src/components/SearchInput/styles.css
+++ b/src/components/SearchInput/styles.css
@@ -2,17 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 480px;
+  width: 700px;
   height: 46px;
   background: #FFF;
   border-radius: 23px;
   padding: 0 24px;
   margin: 0 auto;
-}
-
-.results-container .searchContainer {
-  width: auto;
-  max-width: 700px;
 }
 
 .searchContainer input {
@@ -30,6 +25,8 @@
   margin: 0 8px;
 }
 
-/*.searchContainer input:focus {
-  border: 1px solid blue;
-}*/
+@media (max-width: 700px) {
+  .searchContainer {
+    margin: auto;
+  }
+}
